# NxPU

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  codecov.yml  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
crates/nxpu-analysis/: Cargo.toml
crates/nxpu-analysis/src/: analyze.rs  cost.rs  dataflow.rs  fusion.rs  lib.rs
crates/nxpu-backend-amd/: Cargo.toml
crates/nxpu-backend-amd/src/: lib.rs  support.rs
crates/nxpu-backend-arm-ethos/: Cargo.toml
crates/nxpu-backend-arm-ethos/src/: lib.rs  support.rs
crates/nxpu-backend-ceva/: Cargo.toml
crates/nxpu-backend-ceva/src/: lib.rs  support.rs
crates/nxpu-backend-core/: Cargo.toml
crates/nxpu-backend-core/src/: lib.rs
crates/nxpu-backend-coreml/: Cargo.toml
crates/nxpu-backend-coreml/src/: lib.rs  lower.rs  proto.rs
crates/nxpu-backend-intel/: Cargo.toml
crates/nxpu-backend-intel/src/: lib.rs  openvino_ir.rs  support.rs
crates/nxpu-backend-mediatek/: Cargo.toml
crates/nxpu-backend-mediatek/src/: lib.rs  support.rs
crates/nxpu-backend-onnx/: Cargo.toml
crates/nxpu-backend-onnx/src/: analyze.rs  fusion.rs  lib.rs  lower.rs  proto.rs
crates/nxpu-backend-qualcomm/: Cargo.toml
crates/nxpu-backend-qualcomm/src/: lib.rs  support.rs
crates/nxpu-backend-rockchip/: Cargo.toml
crates/nxpu-backend-rockchip/src/: lib.rs  support.rs
crates/nxpu-backend-samsung/: Cargo.toml
crates/nxpu-backend-samsung/src/: lib.rs  support.rs
crates/nxpu-backend-stablehlo/: Cargo.toml
crates/nxpu-backend-stablehlo/src/: lib.rs  lower.rs
crates/nxpu-backend-tflite/: Cargo.toml
crates/nxpu-backend-tflite/src/: lib.rs  lower.rs  schema.rs
crates/nxpu-cli/: Cargo.toml
crates/nxpu-cli/src/: main.rs
crates/nxpu-e2e-tests/: Cargo.toml
crates/nxpu-e2e-tests/src/: lib.rs
crates/nxpu-e2e-tests/tests/: bench.rs  e2e_coreml.rs  e2e_errors.rs  e2e_numerical.rs  e2e_onnx.rs  e2e_quantize.rs  e2e_stablehlo.rs  e2e_tflite.rs  e2e_vendors.rs
crates/nxpu-e2e-tests/tests/common/: mod.rs
crates/nxpu-ir/: Cargo.toml
crates/nxpu-ir/src/: arena.rs  display.rs  error.rs  expr.rs  func.rs  global.rs  graph.rs  lib.rs  stmt.rs  types.rs
crates/nxpu-ir/tests/: matmul.rs
crates/nxpu-opt/: Cargo.toml
crates/nxpu-opt/src/: calibrate.rs  const_fold.rs  cse.rs  dce.rs  fma_fusion.rs  fusion.rs  layout.rs  lib.rs  memory.rs  quantize.rs  schedule.rs  shape.rs  tiling.rs  validation.rs  vectorize.rs  workgroup.rs
crates/nxpu-parser/: Cargo.toml
crates/nxpu-parser/src/: lib.rs  lower.rs
crates/nxpu-parser/tests/: integration.rs
docs/: CNAME  adding-a-backend.md  architecture.md
examples/: attention.wgsl  causal_attention.wgsl  concat_axis1.wgsl  conv2d_5x5.wgsl  depthwise_conv.wgsl  gather.wgsl  gelu.wgsl  layernorm.wgsl  multihead_attention.wgsl  relu.wgsl  scatter.wgsl  split_axis1.wgsl  transpose.wgsl  vecadd_const.wgsl  vecsub.wgsl
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lower/: concat.wgsl  reduce_sum.wgsl
fuzz/corpus/fuzz_parse/: batchnorm.wgsl  conv2d.wgsl  matmul.wgsl  maxpool.wgsl  split.wgsl  tanh_act.wgsl  vecadd.wgsl  vecmul.wgsl
fuzz/fuzz_targets/: fuzz_lower.rs  fuzz_parse.rs
