[workspace]
resolver = "2"
members = [
    "crates/nxpu-parser",
    "crates/nxpu-ir",
    "crates/nxpu-opt",
    "crates/nxpu-backend-core",
    "crates/nxpu-backend-onnx",
    "crates/nxpu-backend-tflite",
    "crates/nxpu-backend-coreml",
    "crates/nxpu-backend-stablehlo",
    "crates/nxpu-backend-samsung",
    "crates/nxpu-backend-mediatek",
    "crates/nxpu-backend-intel",
    "crates/nxpu-backend-amd",
    "crates/nxpu-backend-qualcomm",
    "crates/nxpu-backend-arm-ethos",
    "crates/nxpu-backend-ceva",
    "crates/nxpu-backend-rockchip",
    "crates/nxpu-cli",
    "crates/nxpu-e2e-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["NxPU Contributors"]
repository = "https://github.com/m96-chan/NxPU"
homepage = "https://github.com/m96-chan/NxPU"
keywords = ["wgsl", "npu", "transpiler", "machine-learning", "compiler"]
categories = ["compilers", "hardware-support"]
rust-version = "1.85"
