[workspace]
resolver = "2"
members = [
    "crates/nxpu-parser",
    "crates/nxpu-ir",
    "crates/nxpu-opt",
    "crates/nxpu-backend-core",
    "crates/nxpu-analysis",
    "crates/nxpu-backend-onnx",
    "crates/nxpu-backend-tflite",
    "crates/nxpu-backend-coreml",
    "crates/nxpu-backend-stablehlo",
    "crates/nxpu-backend-samsung",
    "crates/nxpu-backend-mediatek",
    "crates/nxpu-backend-intel",
    "crates/nxpu-backend-amd",
    "crates/nxpu-backend-qualcomm",
    "crates/nxpu-backend-arm-ethos",
    "crates/nxpu-backend-ceva",
    "crates/nxpu-backend-rockchip",
    "crates/nxpu-cli",
    "crates/nxpu-e2e-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["NxPU Contributors"]
repository = "https://github.com/m96-chan/NxPU"
homepage = "https://github.com/m96-chan/NxPU"
keywords = ["wgsl", "npu", "transpiler", "machine-learning", "compiler"]
categories = ["compilers", "hardware-support"]
rust-version = "1.87"

[workspace.dependencies]
thiserror = "2"
prost = "0.13"
flatbuffers = "25"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
naga = { version = "28", features = ["wgsl-in"] }
