[workspace]
resolver = "3"
members = [
    "crates/nxpu-parser",
    "crates/nxpu-ir",
    "crates/nxpu-opt",
    "crates/nxpu-backend-core",
    "crates/nxpu-analysis",
    "crates/nxpu-backend-onnx",
    "crates/nxpu-backend-tflite",
    "crates/nxpu-backend-coreml",
    "crates/nxpu-backend-stablehlo",
    "crates/nxpu-backend-samsung",
    "crates/nxpu-backend-mediatek",
    "crates/nxpu-backend-intel",
    "crates/nxpu-backend-amd",
    "crates/nxpu-backend-qualcomm",
    "crates/nxpu-backend-arm-ethos",
    "crates/nxpu-backend-ceva",
    "crates/nxpu-backend-rockchip",
    "crates/nxpu-cli",
    "crates/nxpu-e2e-tests",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
authors = ["NxPU Contributors"]
repository = "https://github.com/m96-chan/NxPU"
homepage = "https://github.com/m96-chan/NxPU"
keywords = ["wgsl", "npu", "transpiler", "machine-learning", "compiler"]
categories = ["compilers", "hardware-support"]
rust-version = "1.87"

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow noisy pedantic sublints
assigning_clones = "allow"
bool_to_int_with_if = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
format_push_string = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
uninlined_format_args = "allow"
unnecessary_literal_bound = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"

[workspace.dependencies]
thiserror = "2"
prost = "0.14"
flatbuffers = "25"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
miette = { version = "7" }
naga = { version = "28", features = ["wgsl-in"] }
# dev-only: used by nxpu-e2e-tests
tract-onnx = "0.22"
ndarray = "0.16"
