[package]
name = "nxpu-backend-amd"
description = "AMD XDNA NPU backend for NxPU (via ONNX)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-analysis = { path = "../nxpu-analysis" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-backend-onnx = { path = "../nxpu-backend-onnx" }
prost.workspace = true

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }

[lints]
workspace = true
