[package]
name = "nxpu-backend-arm-ethos"
description = "Arm Ethos NPU backend for NxPU (via TFLite)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-backend-tflite = { path = "../nxpu-backend-tflite" }

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }

[lints]
workspace = true
