[package]
name = "nxpu-backend-ceva"
description = "CEVA NeuPro NPU backend for NxPU (via ONNX)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-backend-onnx = { path = "../nxpu-backend-onnx" }

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }
