[package]
name = "nxpu-backend-core"
description = "Backend trait and plugin architecture for NxPU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
thiserror.workspace = true

[lints]
workspace = true
