[package]
name = "nxpu-backend-coreml"
description = "CoreML backend emitter for NxPU (Apple ANE)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-backend-onnx = { path = "../nxpu-backend-onnx" }
prost = "0.13"
thiserror = "2"

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }
