[package]
name = "nxpu-backend-coreml"
description = "CoreML backend emitter for NxPU (Apple ANE)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-analysis = { path = "../nxpu-analysis" }
prost.workspace = true
thiserror.workspace = true

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }
