[package]
name = "nxpu-backend-stablehlo"
description = "StableHLO/XLA backend emitter for NxPU (Google Cloud TPU)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-analysis = { path = "../nxpu-analysis" }
thiserror.workspace = true

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }
