[package]
name = "nxpu-backend-tflite"
description = "TFLite/LiteRT backend emitter for NxPU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-analysis = { path = "../nxpu-analysis" }
flatbuffers = "25"
thiserror = "2"

[dev-dependencies]
nxpu-parser = { path = "../nxpu-parser" }
