[package]
name = "nxpu-cli"
description = "CLI for the NxPU transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nxpu"
path = "src/main.rs"

[dependencies]
nxpu-parser = { path = "../nxpu-parser" }
nxpu-ir = { path = "../nxpu-ir" }
nxpu-opt = { path = "../nxpu-opt" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
nxpu-backend-onnx = { path = "../nxpu-backend-onnx" }
nxpu-backend-tflite = { path = "../nxpu-backend-tflite" }
nxpu-backend-coreml = { path = "../nxpu-backend-coreml" }
nxpu-backend-stablehlo = { path = "../nxpu-backend-stablehlo" }
nxpu-backend-samsung = { path = "../nxpu-backend-samsung" }
nxpu-backend-mediatek = { path = "../nxpu-backend-mediatek" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
