[package]
name = "nxpu-opt"
description = "IR optimization passes for NxPU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
log.workspace = true
