[package]
name = "nxpu-opt"
description = "IR optimization passes for NxPU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nxpu-ir = { path = "../nxpu-ir" }
nxpu-analysis = { path = "../nxpu-analysis" }
nxpu-backend-core = { path = "../nxpu-backend-core" }
log.workspace = true

[lints]
workspace = true
